--- a/MusicLibrary.Business/MusicLibrary.Business.csproj
+++ b/MusicLibrary.Business/MusicLibrary.Business.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MusicLibrary.Data\MusicLibrary.Data.csproj" />
+  </ItemGroup>
+
 </Project>
