Fix database upgrade

--- a/MusicLibrary.Web/appsettings.json
+++ b/MusicLibrary.Web/appsettings.json
@@ -8,6 +8,6 @@
     },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MusicLibrary": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PixelartDatabase;Integrated Security=True;"
+    "MusicLibrary": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MusicLibrary;Integrated Security=True;"
   }
 }
