--- a/MusicLibrary.Web/appsettings.Development.json
+++ b/MusicLibrary.Web/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MusicLibrary": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MusicLibrary;Integrated Security=True;"
   }
 }
