Start using mediator for collections

--- a/src/MusicLibrary.Business/MusicLibrary.Business.csproj
+++ b/src/MusicLibrary.Business/MusicLibrary.Business.csproj
@@ -7,11 +7,17 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MusicLibrary.Data\MusicLibrary.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Collections\" />
+    <Folder Include="Core\" />
   </ItemGroup>
 
 </Project>
