--- a/src/MusicLibrary.Business/MusicLibrary.Business.csproj
+++ b/src/MusicLibrary.Business/MusicLibrary.Business.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="FluentValidation" Version="10.4.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   </ItemGroup>
@@ -17,7 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Collections\" />
-    <Folder Include="Core\" />
+    <Folder Include="Core\Behaviours\" />
   </ItemGroup>
 
 </Project>
