Create list authors query

--- a/src/MusicLibrary.Business/MusicLibrary.Business.csproj
+++ b/src/MusicLibrary.Business/MusicLibrary.Business.csproj
@@ -20,6 +20,7 @@
     <Folder Include="Collections\" />
     <Folder Include="Core\Behaviours\" />
     <Folder Include="Entities\" />
+    <Folder Include="Authors\" />
   </ItemGroup>
 
 </Project>
