--- a/src/MusicLibrary.Domain/MusicLibrary.Domain.csproj
+++ b/src/MusicLibrary.Domain/MusicLibrary.Domain.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Artists\" />
+  </ItemGroup>
+
 </Project>
