--- a/samples/MigrationTest/MigrationTest.csproj
+++ b/samples/MigrationTest/MigrationTest.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MusicLibrary.Infrastructure\MusicLibrary.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
