--- a/samples/EfCoreInheritanceTest/EfCoreInheritanceTest.csproj
+++ b/samples/EfCoreInheritanceTest/EfCoreInheritanceTest.csproj
@@ -16,7 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Expressions\" />
+	  <Folder Include="Implementations\v1\Expressions\" />
+	  <Folder Include="Implementations\v2\" />
 	</ItemGroup>
 
 </Project>
