--- a/src/MusicLibrary.Web/MusicLibrary.Web.csproj
+++ b/src/MusicLibrary.Web/MusicLibrary.Web.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\services\" />
     <Folder Include="Middlewares\" />
   </ItemGroup>
 
